Individual origins and translate works incorrectly #51651

Closed
opened 2017-05-29 04:16:13 +02:00 by Mikhail Rachinskiy · 8 comments

System Information
Windows 10 x64
Renderer: GeForce GTX 860M/PCIe/SSE2

Blender Version
Broken: 2.78.5 9f044cb
Worked: 2.78c release

Short description of error
Using Individual Origins and Translate tool (with Transform Orientation set to Normal) moves each vertex along it's normal.
When it should treat isolated selections as individual islands.

move_islands.png

Exact steps for others to reproduce the error

  • Open attached blend file: move_islands.blend
  • Use Translate manipulator (or press G then hit Z twice to enter "normal" mode).

In result you should see how each vertex moves along it's normal.

**System Information** Windows 10 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 **Blender Version** Broken: 2.78.5 9f044cb Worked: 2.78c release **Short description of error** Using Individual Origins and Translate tool (with Transform Orientation set to Normal) moves each vertex along it's normal. When it should treat isolated selections as individual islands. ![move_islands.png](https://archive.blender.org/developer/F611636/move_islands.png) **Exact steps for others to reproduce the error** - Open attached blend file: [move_islands.blend](https://archive.blender.org/developer/F611634/move_islands.blend) - Use Translate manipulator (or press G then hit Z twice to enter "normal" mode). # In result you should see how each vertex moves along it's normal.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

Added subscribers: @mano-wii, @ideasman42, @mont29

Added subscribers: @mano-wii, @ideasman42, @mont29

@mano-wii I’d bet change in behavior is due to 21f3767809?

Thing is, I still think it makes more sense to actually handle items (verts, faces…) individually in that case, looks like we could use one additional Pivot option ("Island Center" ?) here… @ideasman42 may also have some ideas?

@mano-wii I’d bet change in behavior is due to 21f3767809? Thing is, I still think it makes more sense to actually handle items (verts, faces…) individually in that case, looks like we could use one additional Pivot option ("Island Center" ?) here… @ideasman42 may also have some ideas?
Author
Member

I can't think of a single use case where handling each vertex is more preferable than island during translate operation. But I can bring a lot use cases for handling whole island in hard surface area, including jewelry modeling.

If I want to move each element along it's normal, then Shrink/Flatten is obviously a better choice here.

I can't think of a single use case where handling each vertex is more preferable than island during translate operation. But I can bring a lot use cases for handling whole island in hard surface area, including jewelry modeling. If I want to move each element along it's normal, then Shrink/Flatten is obviously a better choice here.
Author
Member

Can this be reverted to the previous behavior before the release? I depend on this very often in my work.

And it also breaks behavior consistency when selection always behaves like island, except when you use translate along normal.

Can this be reverted to the previous behavior before the release? I depend on this very often in my work. And it also breaks behavior consistency when selection always behaves like island, except when you use translate along normal.

This issue was referenced by 3be073807b

This issue was referenced by 3be073807bd7a5c2e2d55d92539afce7916bd382

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51651
No description provided.