Fix T51651: translate w/ individual origins fails

Regression in fix for T46892